--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
         
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">BookStore</a>
-		<a class="navbar-brand" href="#">Books</a>
+        <a class="navbar-brand" href="(% url 'home' %}">BookStore</a>
+		<a class="navbar-brand" href="{% url 'book_list' %}">Books</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
