--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load static %}
 {% block title %}Home{% endblock title %}
 {% block content %}
    <h1>Homepage</h1>
+   <img class="homecover" src="{% static 'images/home.jpg' %}"
 {% endblock content %}
 
 
